--- a/ClientApp/src/app/cosmos-threejs/cosmos-threejs.component.html
+++ b/ClientApp/src/app/cosmos-threejs/cosmos-threejs.component.html
@@ -5,6 +5,11 @@
     <h1 class="text-light">Welcome</h1>
     <h3 class="text-light">to</h3>
     <h2 class="text-info">Marc's Awesome Apps</h2>
-    <p class="">Built using ASP.NET Core, MySQL & Angular</p>
+    <p class="">Built using .NET Core (Web API MVC), MySQL (Enity Framework) & Angular (Three.JS, Material, Bootstrap)</p>
+    <a class="btn btn-outline-light mt-2" target="_blank"
+    href="https://github.com/mocavada/NETCore_Angular_AwesomeApps">
+        <span class="glyphicon glyphicon-play pl-3 pr-4 pt-2 pb-2" aria-hidden="true">Git Hub</span>
+   </a>
+
    </div>
 </div>
