--- a/ClientApp/src/app/movieTime/movie-add/movie-add.component.html
+++ b/ClientApp/src/app/movieTime/movie-add/movie-add.component.html
@@ -1,30 +1,53 @@
 <div class="container">
+
 <div class="row pt-5">
   <div class="col">
+      <div class="row">
+          <div *ngIf="validMessage != ''">
+            <h3 class="has-info">{{validMessage}}</h3>
+          </div>
+      </div>
+      <form class="form-group"
+      [formGroup]="movieForm" (ngSubmit)="onSubmit(movieForm)">
       <div class="example-container">
           <mat-form-field>
             <h4>Movie Title</h4>
-            <input matInput placeholder="">
+            <input value=""
+            formControlName="title"
+            matInput placeholder="">
           </mat-form-field>
 
           <mat-form-field>
             <h4>Genre</h4>
-            <input matInput placeholder="">
+            <input value=""
+            formControlName="genre"
+            matInput placeholder="">
           </mat-form-field>
 
           <mat-form-field>
               <h4>Price</h4>
-              <input matInput placeholder="">
+              <input value=""
+              formControlName="price"
+              matInput placeholder="">
           </mat-form-field>
 
           <mat-form-field>
               <h4>Release Date</h4>
-              <input matInput [matDatepicker]="picker" placeholder="">
+              <input
+              formControlName="releaseDate"
+              matInput [matDatepicker]="picker" placeholder="">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
 
+          <button mat-flat-button value="Post" type="submit" class="submitmovie" style="align-self: center; width:100%" color="accent"><h5>Add</h5></button>
         </div>
+        </form>
+  </div>
+
+
+  <div class="col">
+    <app-movie-list></app-movie-list>
   </div>
 </div>
 </div>
