--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -17,8 +17,12 @@
             <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>WeatherAPI</a>
         </li>
 
+        <li class="nav-item" [routerLinkActive]='["link-active"]'>
+          <a class="nav-link text-dark" [routerLink]='["/movie-add"]'>MovieFlix</a>
+      </li>
 
-      <li class="nav-item dropdown" [routerLinkActive]='["link-active"]'>
+
+      <!-- <li class="nav-item dropdown" [routerLinkActive]='["link-active"]'>
           <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             MovieApp
           </a>
@@ -26,7 +30,7 @@
             <a class="dropdown-item" [routerLink]='["/movie-list"]'><b>Movie List</b></a>
             <a class="dropdown-item" [routerLink]='["/movie-add"]'><b>Add Movie</b></a>
           </div>
-      </li>
+      </li> -->
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
